Added Template API Requests for PatientList and PatientData
