# docs/swagger.json
@@ -12,6 +12,94 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/patient-data-no-auth": {
+            "post": {
+                "description": "Checks for a matching id in the databse and returns data for that id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Patient"
+                ],
+                "summary": "Provides data about a patient",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of the patient",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PatientData"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/patient-list-no-auth": {
+            "post": {
+                "description": "Finds username in database and retrieves all patients for that user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Patient"
+                ],
+                "summary": "Retrieves a list of patients for the specified doctor username",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username of the doctor",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PatientList"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/test-no-auth": {
             "get": {
                 "description": "Will ask the service to generate a test json and return it back to the requester",
@@ -49,6 +137,80 @@
         }
     },
     "definitions": {
+        "model.Patient": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "date_created": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "samples": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.PatientData": {
+            "type": "object",
+            "properties": {
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "date_created": {
+                    "type": "string"
+                },
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "samples": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Sample"
+                    }
+                },
+                "sex": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.PatientList": {
+            "type": "object",
+            "properties": {
+                "patients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Patient"
+                    }
+                }
+            }
+        },
+        "model.Sample": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "prediction": {
+                    "type": "number"
+                }
+            }
+        },
         "model.Test": {
             "type": "object",
             "properties": {
