# main.go
@@ -12,6 +12,7 @@ import (
 	_ "time"
 
 	test "ccu/api/test"
+	patient "ccu/api/patient"
 
 	log "github.com/sirupsen/logrus"
 
@@ -42,6 +43,8 @@ func main() {
 // Requests
 func handleRequests(r *mux.Router) {
 	r.HandleFunc("/api/v1/test-no-auth", test.GetTest).Methods("GET")
+	r.HandleFunc("/api/v1/patient-list-no-auth", patient.PostPatientList).Methods("POST")
+	r.HandleFunc("/api/v1/patient-data-no-auth", patient.PostPatientData).Methods("POST")
 }
 
 // Build log output file
