# model/api/patientlist/patientlist.go
@@ -1,0 +1,5 @@
+package model
+
+type PatientList struct {
+	Patients []Patient `json:"patients"`
+}
